<resources>
    <string name="app_name">Head 2 Head</string>
    <string name="startNormalGame">Start PVP Game</string>
    <string name="startAIGame">Start AI Game</string>
    <string name="viewRounds">View Rounds</string>
    <string name="pastRounds">Past Rounds</string>

    <!-- Players -->
    <string name="playerName1Hint">Player 1</string>
    <string name="playerName2Hint">Player 2</string>

    <!-- scores -->
    <string name="miss">M</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="none"> </string>
    <string name="eq">=</string>
    <string name="enter">Enter</string>
    <string name="del">Del</string>

    <!-- Players -->
    <string name="player1">Luke - 0</string>
    <string name="player2">😝 - player2</string>

    <string name="shootoff_player1">p1 Won</string>
    <string name="shootoff_player2">p2 Won</string>
    <string name="shootoff_tie">Tie</string>

    <!-- Image Descriptions -->
    <string name="divider">Divider For Players</string>
    <string name="logo">Logo</string>

    <!-- Winners Screen -->
    <string name="playagain">Play Again?</string>
    <string name="contnosave">Don\'t Save</string>
    <string name="back">Save Score</string>

    <!-- Past Rounds -->
    <string name="matchbreakdown">Match Breakdown</string>
    <string name="setpoints">Set Points</string>
    <string name="score">Score</string>
    <string name="tens">10\'s</string>
    <string name="nines">9\'s</string>
    <string name="hits">Hits</string>
</resources>