<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:clickable="true"
    tools:context=".fragments.GameWinFragment" >

    <TextView
        android:id="@+id/winningPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/none"
        android:textColor="@color/Gold"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/finalGameScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/finalGameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/none"
        android:textAllCaps="false"
        android:textColor="@color/Gold"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/noSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/scorebutton"
                android:backgroundTint="@color/Gold"
                android:text="@string/contnosave"
                android:textAllCaps="false"
                android:textColor="@color/Gold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/scorebutton"
                android:backgroundTint="@color/Gold"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/Gold"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/scorebutton"
            android:backgroundTint="@color/Gold"
            android:text="@string/playagain"
            android:textAllCaps="false"
            android:textColor="@color/Gold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>