<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/player1ShootoffWon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:height="100dp"
                android:background="@drawable/scorebutton"
                android:backgroundTint="@color/Red"
                android:outlineProvider="none"
                android:text="@string/shootoff_player1"
                android:textAllCaps="false"
                android:textColor="@color/Red"
                android:textSize="24sp" />

            <Button
                android:id="@+id/player2ShootoffWin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:height="100dp"
                android:background="@drawable/scorebutton"
                android:backgroundTint="@color/Blue"
                android:outlineProvider="none"
                android:text="@string/shootoff_player2"
                android:textAllCaps="false"
                android:textColor="@color/Blue"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:id="@+id/shootoffTieButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="10dp"
            android:height="100dp"
            android:background="@drawable/scorebutton"
            android:backgroundTint="@color/Gold"
            android:text="@string/shootoff_tie"
            android:textAllCaps="false"
            android:textColor="@color/Gold"
            android:textSize="36sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>